2006-03-14    <Daddy@C-3PO>

	* lib/WWW/Ebay/Session.pm (watchlist_auctions): new method

2006-03-13    <Daddy@C-3PO>

	* lib/WWW/Ebay/Session.pm (clear_errors): new method

2006-02-19    <Daddy@C-3PO>

	* lib/WWW/Ebay/Session.pm (fetch_any_ebay_page): fix Mature-login page ID

	* Completed.pm (_title_td_specs): moved page parsing to WWW::Search::Ebay

2005-09-18    <Daddy@C-3PO>

	* lib/WWW/Ebay/Session.pm (signin): new URL
	(selling_page): new URL
	(selling_auctions): handle slight change to page's HTML(?)

2005-03-12  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Completed.pm (parse_tree): fix order of result columns
	(parse_tree): set bid_count on results

2005-02-19  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Ebay/Session.pm (selling_auctions): fix for slightly changed HTML format

2005-01-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Completed.pm (parse_tree): new function
	overhauled for new webpage formatting
	(parse_tree): added code to correct for year-end date wraparound (not tested)

2005-01-22  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Mature.pm (login): return 1 on success

	* lib/WWW/Search/Ebay/Completed.pm (login): return 1 on success
	(preprocess_results_page_OFF): new method

	* lib/WWW/Ebay/Session.pm (fetch_any_ebay_page): new argument to control the following of redirects
	(signin): do not follow redirects during sign-in; watch for new page contents

2004-10-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Completed.pm (native_setup_search): fix CGI params

2004-08-07  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Ebay/Session.pm (selling_auctions): derive shipping cost; fix cents rounding

	* lib/WWW/Ebay/Listing.pm (as_string): new method

2004-06-01  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Ebay/Listing.pm (new): fix the FAIL return value

2004-05-31  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Ebay/Status.pm (reset): fixed the reset() method

2004-03-13  Kingpin  <mthurn@verizon.net>
