@@ -1,5 +1,5 @@
 
-# $rcs = ' $Id: Ebay.pm,v 1.16 2007/01/04 00:55:56 Daddy Exp $ ' ;
+# $rcs = ' $Id: Ebay.pm,v 1.17 2007/04/07 20:39:28 Daddy Exp $ ' ;
 
 =head1 NAME
 
@@ -34,7 +34,7 @@ Martin Thurn, C<mthurn@cpan.org>, L<http://www.sandcrawler.com/SWB/cpan-modules.
 package WWW::Ebay;
 
 my
-$VERSION = '0.079';
+$VERSION = '0.081';
 
 1;
 
