@@ -1,3 +1,7 @@
+2007-04-07    <Daddy@C-3PO>
+
+	* Makefile.PL: fix prerequisite module names
+
 2006-03-14    <Daddy@C-3PO>
 
 	* lib/WWW/Ebay/Session.pm (watchlist_auctions): new method
